--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>todo app</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel = "stylesheet" href = "style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,4 +50,5 @@
     </div>
     <script src = "main.js"></script>
 </body>
-</html>
+    </html>
+    
